--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,8 @@
     --color-primary: #5956E8;
     --radius-10: 10px;
     --shadow-box: 0 5px 20px 0 rgba(22, 44, 83, 0.1); 
+    --color-linear: linear-gradient[176deg, rgba(245,245,250,1) 0%, rgba(198,195,232,1) 22%, rgba(194,187,247,1) 35%, rgba(179,176,252,1) 51%, rgba(141,129,249,1) 66%, rgba(96,90,184,1) 78%, rgba(72,54,168,1) 86%, rgba(54,32,164,1) 92%, rgba(48,39,131,1) 98%, rgba(62,92,199,1) 98%, rgba(71,32,171,1) 100%];
   }
 
+  linear-gradient(176deg,rgba(245,245,250,0.8) 0%,rgba(198,195,232,0.1) 2%,rgba(194,187,247,0.1) 32%,rgba(179,176,252,0.4) 53%,rgba(141,129,249,0.3) 64%,rgba(96,90,184,0.8) 80%,rgba(72,54,168,0.7) 86%,rgba(54,32,164,0.9) 100%,rgba(48,39,131,0.8) 98%,rgba(62,92,199,0.9) 98%,rgba(71,32,171,0.8) 100%)
   
